<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tic-Tac-Toe Game</string>
    <string name="first_human">You play first</string>
    <string name="turn_human">Your Turn </string>
    <string name="turn_computer">Computer\'s Turn</string>
    <string name="playerOne">Player 1:  </string>
    <string name="ties">Ties:  </string>
    <string name="playerTwo">Player 2:  </string>
    <string name="result_tie">It\'s a Tie</string>
    <string name="result_human_wins">You Won!</string>
    <string name="result_computer_wins">Computer Won!</string>
    <string name="result_player1_wins">Player 1 Won!</string>
    <string name="result_player2_wins">Player 2 Won!</string>
    <string name="game_stats">Game Stats: </string>
    <string name="play_again">Play Again</string>
    <string name="back">Back</string>
    <string name="by3" tools:keep="@string/by3">3 by 3</string>
    <string name="by5" tools:keep="@string/by5">5 by 5</string>
    <string name="newGame_label">New Game</string>
    <string name="exitGame_label">Exit Game</string>
    <string name="playComputer">Single Player Mode</string>
    <string name="playHuman">Two Player Mode</string>
    <string name="turn_player1">Player 1 Turn</string>
    <string name="turn_player2">Player 2 Turn</string>
    <string name="welcome">Welcome to Tic Tac Toe Game</string>
    <string name="about" tools:keep="@string/about">Game designed by Solomon A. Ogunbowale
        \n --------For Andela ALC 2.0 Final Project.--------
        \n -----------------------copyright 2018------------------------
    </string>
    <string name="select_option">Please select your opponent</string>
    <string name="select_turn">Please select your turn</string>
    <string name="player1">X</string>
    <string name="player2">O</string>
</resources>
